--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mr-2">
             <i class="bi bi-house-door-fill"></i>
             <li class="nav-item">
-              <a href="./moduloPix.html" style="color: #161E23;"><i class="m-2 me-3 align-middle fa-brands fa-pix fa-xl"></i></a>
+              <a href="./moduloPix.php" style="color: #161E23;"><i class="m-2 me-3 align-middle fa-brands fa-pix fa-xl"></i></a>
             </li>
             <li class="nav-item">
-              <a href="./moduloConta.html" style="color: #161E23;"><i class="m-2 align-middle fa-solid fa-user fa-xl fa-xl"></i></a>
+              <a href="./moduloConta.php" style="color: #161E23;"><i class="m-2 align-middle fa-solid fa-user fa-xl fa-xl"></i></a>
             </li>
           </ul>
         </div>
@@ -46,8 +46,8 @@
           <div class="container">
             <div class="row">
               <div class="col">
-                <a href="./moduloConta.html"> <button class="button-index"><i class="fa-solid fa-dollar-sign"></i> Conta</button></a>
-                <a href="./moduloPix.html"><button class="button-index mt-5"> <i class="m-2 me-3 fa-brands fa-pix fa-md"></i> Pix </button></a>
+                <a href="./moduloConta.php"> <button class="button-index"><i class="fa-solid fa-dollar-sign"></i> Conta</button></a>
+                <a href="./moduloPix.php"><button class="button-index mt-5"> <i class="m-2 me-3 fa-brands fa-pix fa-md"></i> Pix </button></a>
               </div>
             </div>
           </div>
